--- a/.gitconfig
+++ b/.gitconfig
@@ -6,7 +6,7 @@
 	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --
 	st = status -s
 [core]
-	editor = $EDITOR -w
+	editor = $EDITOR
 	pager = delta
 [interactive]
 	diffFilter = delta --color-only
