--- a/vscode/User/settings.json
+++ b/vscode/User/settings.json
@@ -27,12 +27,5 @@
   "terminal.integrated.minimumContrastRatio": 1,
   "window.commandCenter": false,
   "window.titleBarStyle": "native",
-  "catppuccin-icons.hidesExplorerArrows": false,
-  "apc.font.family": "JetBrainsMono Nerd Font",
-  "apc.electron": {
-    "titleBarStyle": "hiddenInset",
-    "trafficLightPosition": { "x": 9, "y": 9 }
-  },
-  "apc.header": { "height": 32 },
-  "apc.listRow": { "height": 24 }
+  "catppuccin-icons.hidesExplorerArrows": false
 }
