--- a/home/Brewfile
+++ b/home/Brewfile
@@ -16,11 +16,11 @@ cask "claude-code"
 cask "cleanshot"
 cask "cursor"
 cask "font-jetbrains-mono-nerd-font"
+cask "ghostty"
 cask "orbstack"
 cask "protonvpn"
 cask "raycast"
 cask "signal"
 cask "spotify"
-cask "warp"
 mas "1Password for Safari", id: 1569813296
 mas "Proton Pass for Safari", id: 6502835663
