--- a/factory/.factory/settings.json
+++ b/factory/.factory/settings.json
@@ -1,7 +1,7 @@
 // Factory CLI Settings
 // This file contains your Factory CLI configuration.
 {
-  "model": "claude-opus-4-5-20251101",
+  "model": "claude-sonnet-4-5-20250929",
   "reasoningEffort": "high",
   "cloudSessionSync": true,
   "diffMode": "github",
@@ -52,7 +52,9 @@
     "rm -rf /*",
     "rm -rf ~",
     "rm -rf ~/*",
-    "shutdown"
+    "shutdown",
+    "Format-Volume",
+    "format.com"
   ],
   "enableCustomDroids": true,
   "includeCoAuthoredByDroid": false,
@@ -63,5 +65,6 @@
   "showThinkingInMainView": false,
   "ideAutoConnect": false,
   "hooksDisabled": false,
-  "specSaveEnabled": true
+  "specSaveEnabled": true,
+  "opus45PriceChangeDismissed": true
 }
