--- a/factory/.factory/settings.json
+++ b/factory/.factory/settings.json
@@ -18,7 +18,13 @@
   "commandAllowlist": [
     "dir",
     "ls",
-    "pwd"
+    "pwd",
+    "git status",
+    "git diff",
+    "git log",
+    "git show",
+    "git blame",
+    "git ls-files"
   ],
   // Commands that will ALWAYS require confirmation, regardless of autonomy level.
   // These are dangerous commands that could cause data loss or system damage.
