(dev) move git user config to local include
Keep credentials out of the public repo. Each machine
provides its own ~/.gitconfig.local with [user] settings.

--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -28,6 +28,5 @@
 	conflictstyle = diff3
 [diff]
 	colorMoved = default
-[user]
-	name = El Marques
-	email = el@dachs.tech
+[include]
+	path = ~/.gitconfig.local
