--- a/config/aerospace/aerospace/aerospace.toml
+++ b/config/aerospace/aerospace/aerospace.toml
@@ -102,6 +102,10 @@ run = 'move-node-to-workspace 2'
 if.app-name-regex-substring = 'Slack'
 run = 'move-node-to-workspace 3'
 
+[[on-window-detected]]
+if.app-id = 'com.apple.Notes'
+run = 'move-node-to-workspace 3'
+
 # --- Workspace 4 ---
 
 # ------------ Monitor 2 ------------
