--- a/config/ghostty/ghostty/config
+++ b/config/ghostty/ghostty/config
@@ -2,6 +2,8 @@ background-opacity = 1
 keybind = shift+enter=text:\x1b\r
 theme = Ayu
 window-padding-x = 16
+window-padding-y = 16
+split-divider-color = #222838
 
 # Font
 font-family = Berkeley Mono
